# smartwaste-detect-e2e

./: .env  .gitignore  README.md  main.py  pyproject.toml  ruff.toml
configs/: train.yaml
configs/data/: datasets.yaml  default.yaml
notebooks/: 01_EDA.ipynb  02_dataset_prepare.ipynb
scripts/: rename_datasets.py
